[package]
name = "delta-fusion-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
deltalake = { version = "0.14.0", features = ["arrow", "hdfs", "datafusion", "datafusion-ext"]}
# fs-hdfs3 = "0.1.11"
# object_store = "0.6.1"
# bytes = "1.0"
datafusion = "28.0.0"
datafusion-common = "28.0.0"
datafusion-expr = "28.0.0"
datafusion-sql = "28.0.0"
datafusion-optimizer = "28.0.0"
# url = "2.2"
arrow = "45.0.0"